# OpenChisel

./: .gitignore  README.md
chisel_ros/: CMakeLists.txt  catkin.cmake
chisel_ros/config/: mei_camera_camera_calib.yaml  px_mei_camera_calib.yaml
chisel_ros/include/chisel_ros/: ChiselServer.h  ChiselServer.h~  Conversions.h
chisel_ros/launch/: bbgf.launch  bluefox.launch  demo.launch  dense_tracking.launch  fisheye.launch  gt_uzh_room.launch  qt.launch  three_cropped_cameras.launch  tsdf_fusion.launch  uzh_room.launch  vafric.launch  visensor.launch
chisel_ros/src/: .ChiselServer.cpp.swp  ChiselNode.cpp  ChiselServer.cpp
open_chisel/: CMakeLists.txt
open_chisel/include/open_chisel/: Chisel.h  Chunk.h  ChunkManager.h  DistVoxel.h  ProjectionIntegrator.h
open_chisel/include/open_chisel/camera/: FisheyeCamera.h
open_chisel/include/open_chisel/geometry/: Frustum.h
open_chisel/include/open_chisel/truncation/: InverseTruncator.h
open_chisel/src/: Chisel.cpp  Chunk.cpp  ChunkManager.cpp  ProjectionIntegrator.cpp
open_chisel/src/camera/: FisheyeCamera.cpp  PinholeCamera.cpp
open_chisel/src/geometry/: Frustum.cpp
